<resources>
    <string name="app_name"> MRCE </string>
    <string name="play">play</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="title1">Welcome</string>
    <string name="title2">Improve Your Skills</string>
    <string name="title3">Grow Your Audience</string>
    <string name="Description">Malla Reddy College Of Engineering</string>
    <string name="next">\t   Next  \t </string>
    <string name="back">Back</string>
    <string name="done">Done</string>


    <!-- //expandable view strings <starts>-->
    <string name="group1">Ist year</string>
    <string name="group2">C.s.e.</string>
    <string name="group3">I.t.</string>
    <string name="group4">E.c.e.</string>
    <string name="group5">Mechanical</string>
    <string name="group6">I.t.e.</string>
    <string name="default_notification_channel_id" />
    <string-array name="group1">
        <item>Branch : CSE/IT/EEE</item>
        <item>Branch : ECE/EIE </item>
        <item>Branch : MECH/M.E./C.E./CIVIL </item>
    </string-array>
    <string-array name="group2">
        <item>Year-2</item>
        <item>Year-3</item>
        <item>Year-4</item>
    </string-array>
    <string-array name="group3">
        <item>Year-2</item>
        <item>Year-3</item>
        <item>Year-4</item>

    </string-array>
    <string-array name="group4">
        <item>Year-2</item>
        <item>Year-3</item>
        <item>Year-4</item>
    </string-array>

    <string-array name="group5">
        <item>Year-2</item>
        <item>Year-3</item>
        <item>Year-4</item>
    </string-array>


    <string-array name="group6">
        <item>Year-2</item>
        <item>Year-3</item>
        <item>Year-4</item>

    </string-array>

    <!-- //expandable view strings<ends/>-->


    <string name="CSE_desc">Computer science is the study of processes that interact with data and that can be represented as data in the form of programs. It enables the use of algorithms to manipulate, store, and communicate digital information. A computer scientist studies the theory of computation and the design of software systems.</string>
    <string name="ECe_desc">Electronic engineering (also called electronics and communications engineering) is an electrical engineering discipline which utilizes nonlinear and active electrical components (such as semiconductor devices, especially transistors, diodes and integrated circuits) to design electronic circuits, devices, VLSI devices and their systems. The discipline typically also designs passive electrical components, usually based on printed circuit boards. Electronics is a subfield within the wider electrical engineering academic subject but denotes a broad engineering field that covers subfields such as analog electronics, digital electronics, consumer electronics, embedded systems and power electronics. Electronics engineering deals with implementation of applications, principles and algorithms developed within many related fields, for example solid-state physics, radio engineering, telecommunications, control systems, signal processing, systems engineering, computer engineering, instrumentation engineering, electric power control, robotics, and many others.</string>
    <string name="it_Desc">Information technology (IT) is the use of computers to store, retrieve, transmit, and manipulate data[1] or information. IT is typically used within the context of business operations as opposed to personal or entertainment technologies.[2] IT is considered to be a subset of information and communications technology (ICT). An information technology system (IT system) is generally an information system, a communications system or, more specifically speaking, a computer system – including all hardware, software and peripheral equipment – operated by a limited group of users.</string>
    <string name="hs_Desc">The Department of Humanities and Sciences (H and S) is one of the earliest Departments at MRCE established in the year 2005. The Department of Humanities and Sciences (HS) offers basic Engineering Mathematics, Physics, Chemistry and English for U.G students of all B.Tech courses at first year level.</string>
    <string name="mec_desc">Mechanical engineering is an engineering discipline that combines engineering physics and mathematics principles with materials science to design, analyze, manufacture, and maintain mechanical systems.[1] It is one of the oldest and broadest of the engineering disciplines.</string>
    <string name="ite_desc">Information Technology Engineering plays a vital role in our modern day lifestyles. It has touched each and every aspect of human life. With the emergence of computers, we are witnessing a sea change in the business world. Starting from multi-national corporations to small businesses, IT plays a stupendous role. In the field of Communication, Inventory Management, Data Management, Management Information Systems and Customer Relationship Management, IT plays a pivotal role. IT has also opened up various concepts like online shopping, digital marketing, social networking, digital communication, cloud computing, Mobile, and big data for solving many social and business problems. In addition, for making long-term business successful, IT has developed many tools and software applications.</string>
    <string name="csds_desc">Data creates magic. Industries need data to help them make careful decisions. Data Science churns raw data into meaningful insights. Therefore, industries need data science. A Data Scientist is a wizard who knows how to create magic using data. A skilled Data Scientist will know how to dig out meaningful information with whatever data he comes across. He helps the company in the right direction. The company requires strong data-driven decisions at which he’s an expert. The Data Scientist is an expert in various underlying fields of Statistics and Computer Science. He uses his analytical aptitude to solve business problems.</string>
    <string name="csiot_desc">“The internet of things (IoT) is a computing concept that describes the idea of everyday physical objects being connected to the internet and being able to identify themselves to other devices.”
This would mean that normal everyday household items will be integrated with sophisticated tech to do more.
You might also know IoT as “smart”. At the moment, it is currently in the infancy stage with some devices around like smart TVs, smart refrigerators and smart entry locks. Sooner or later, things like driverless cars and personal assistant devices (e.g. Google Glass) would become the norm.</string>
    <string name="csaiml_desc">Artificial intelligence (AI) is the basis for mimicking human intelligence processes through the creation and application of algorithms built into a dynamic computing environment. Stated simply, AI is trying to make computers think and act like humans.The more humanlike the desired outcome, the more data and processing power required.
Today, the amount of data that is generated, by both humans and machines, far outpaces humans’ ability to absorb, interpret, and make complex decisions based on that data.</string>
    <string name="title_activity_my_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Syllabus">syllabus</string>
    <string name="contact">contact</string>
</resources>
