<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3140C4FF"
    android:orientation="vertical"
    tools:context=".ThirdFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/mrce" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cousine_bold"
        android:text="@string/title3"
        android:textColor="@color/colorAccent"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Description"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/brown"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slidethreeback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:clickable="true"
            android:fontFamily="@font/cousine_bold"
            android:focusable="true"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/slidethreenext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|end"
            android:text="@string/done"
            android:fontFamily="@font/cousine_bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>