<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#3140C4FF"
    tools:context=".SecondFragment">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/mrce" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="@dimen/_22ssp"
        android:fontFamily="@font/cousine_bold"
        android:layout_marginTop="@dimen/_35sdp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/Description"
        android:textColor="@color/brown"
        android:textSize="@dimen/_18ssp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_150sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:id="@+id/slidetwoback"
            android:textAlignment="center"
            android:focusable="true"
            android:textColor="@color/colorAccent"

            android:text="@string/back"
            android:fontFamily="@font/cousine_bold"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/slidetwonext"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/cousine_bold"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20ssp" />
    </LinearLayout>

</LinearLayout>