<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#3140C4FF"
    tools:context=".FirstFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/mrce" />

    <TextView
        android:fontFamily="@font/cousine_bold"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textSize="32sp"
        android:layout_marginTop="38dp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Description"
        android:textColor="@color/brown"
        android:textSize="15sp"

        android:gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="180dp"


        >

        <TextView
            android:id="@+id/slideonenext"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/bt_cont"

            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/cousine_bold"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>